Fixed Contact details wrapping and added 80% width

--- a/src/app/components/about-me/about-me.component.scss
+++ b/src/app/components/about-me/about-me.component.scss
@@ -4,13 +4,14 @@
     height: 100vh;
 
     h1 {
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-weight: bold;
     }
 
     .contact-details {
         font-size: 1.5rem;
         text-decoration: none;
+        white-space: nowrap;
         
         a {
             color: white;
