--- a/src/app/components/portfolio/portfolio.component.scss
+++ b/src/app/components/portfolio/portfolio.component.scss
@@ -7,6 +7,9 @@ app-nav-bar {
     min-height: 100vh;
 }
 
+app-work-experience {
+    margin-top: 5rem
+}
 
 
 .content-container {
